--- a/main.html
+++ b/main.html
@@ -4,5 +4,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
-
+		<h3 id = "url">
+			https://localhost:8080/
+		</h3>
+	<input type = "text" id = "name" name = "name"><br>
+	<input type = "number" id = "year" name = "year"><br>
+	<input type = "submit" id = "button">
+	
 </html>
