--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 		<h3 id = "url">
 			https://localhost:8080/
 		</h3>
-	<input type = "text" id = "name" name = "name"><br>
-	<input type = "number" id = "year" name = "year"><br>
+	Name:<br><input type = "text" id = "name" name = "name"><br>
+	Graduation year:<br><input type = "number" id = "year" name = "year"><br>
 	<input type = "submit" id = "button">
 	
 </html>
