--- a/main.html
+++ b/main.html
@@ -9,6 +9,6 @@
 		</h3>
 	Name:<br><input type = "text" id = "name" name = "name"><br>
 	Graduation year:<br><input type = "number" id = "year" name = "year"><br>
-	<input type = "submit" id = "button">
+	<button id="button">Submit</button>
 	
 </html>
